# lime

./: Cargo.toml  LICENSE  PLAN.md  README.md
crates/lime-cli/: Cargo.toml
crates/lime-cli/src/: main.rs
crates/lime-core/: Cargo.toml
crates/lime-core/src/: buffer.rs  command.rs  cursor.rs  edit.rs  error.rs  file.rs  history.rs  lib.rs  movement.rs  search.rs  selection.rs
crates/lime-syntax/: Cargo.toml
crates/lime-syntax/src/: highlighter.rs  language.rs  lib.rs  theme.rs
crates/lime-ui/: Cargo.toml
crates/lime-ui/src/: app.rs  command_bar.rs  config.rs  editor_view.rs  file_picker.rs  input.rs  layout.rs  lib.rs  markdown_preview.rs  prompt.rs  status_bar.rs  terminal.rs  theme.rs
