[workspace]
members = [
  "crates/lime-core",
  "crates/lime-syntax",
  "crates/lime-ui",
  "crates/lime-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/owen/lime"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
ropey = "1"
crossterm = "0.28"
ratatui = "0.29"
unicode-segmentation = "1"
unicode-width = "0.2"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-json = "0.24"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
tempfile = "3"
