[package]
name = "lime-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
ignore.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
unicode-width.workspace = true
lime-core = { path = "../lime-core" }
lime-syntax = { path = "../lime-syntax" }
pulldown-cmark.workspace = true
